adding swagger documentation for task routes
